@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<content id="JP_SatelliteDropper" name="JP_SatelliteDropper" description="This script allows your ship to deploy satellites at Stations, Jumpgates, Accelerators, and Superhighways either in a specific Sector or across the entire galaxy." author="JanPanthera" version="207" date="2023-07-20" save="0" enabled="1">
+<content id="JP_SatelliteDropper" name="JP_SatelliteDropper" description="This script allows your ship to deploy satellites at Stations, Jumpgates, Accelerators, and Superhighways either in a specific Sector or across the entire galaxy." author="JanPanthera" version="207" date="2023-07-21" save="0" enabled="1">
    <text language="7"  name="JP_SatelliteDropper" description="Этот скрипт позволяет вашему кораблю разместить спутники на станциях, прыжковых вратах, ускорителях и сверхшоссе, в конкретном секторе или во всей галактике."/>
    <text language="33" name="JP_SatelliteDropper" description="Ce script permet à votre vaisseau de déployer des satellites dans des Stations, des Portes de Saut, des Accélérateurs, et des Autoroutes Spatiales, soit dans un Secteur spécifique, soit dans l'ensemble de la galaxie."/>
    <text language="34" name="JP_SatelliteDropper" description="Este script permite que tu nave despliegue satélites en Estaciones, Portales de Salto, Aceleradores y Autopistas Espaciales, ya sea en un Sector específico o en toda la galaxia."/>
